--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   intl: ^0.20.2
+  vietqr_flutter: ^1.0.1
 
 dev_dependencies:
   flutter_test:
