--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.1.5
   intl: ^0.20.2
   vietqr_flutter: ^1.0.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
